--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -135,6 +135,7 @@
 @import "components/events-listing";
 @import "components/events-map";
 @import "components/staff-details";
+@import "components/magazine-single";
 
 
 
