Adding Related Artists and Related Posts to single Green Room Items

--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_single-online.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_single-online.scss
@@ -12,7 +12,7 @@ body.single-online, body.single-post {
 
     .side-bar-artist {
       border-top: 1px solid #cccccc;
-      padding: $sitepadding 0;
+      padding: $sitepadding-small 0;
       width: 100%;
       position: relative;
     }
