Online Items, Audio Player, People Page

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_online-item.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_online-item.scss
@@ -99,6 +99,12 @@ body.post-type-archive-online {
 //Single online pages **
 //************************
 
+body.single-online {
+	.small-12.columns.audio-player {
+		padding: 0;
+	}
+}
+
 .single-online-category {
 	display: flex;
 	li {
