Search Results Pages

--- a/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
@@ -26,6 +26,10 @@ p {
     line-height: 1.8;
 }
 
+li {
+    font-size: 20px;
+}
+
 //remove margin above footer
 #footer-container {
     margin-top: 0 !important;
