--- a/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
@@ -13,6 +13,14 @@
     }
 }
 
+//Search Page Styles to make all inline
+body.search {
+  .blogpost-entry {
+    display: inline;
+  }
+}
+
+
 .hero-heading {
     font-family: $serif-font;
 }
