--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_footer.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_footer.scss
@@ -17,13 +17,13 @@
     li {
         display: block;
         vertical-align: middle;
-        padding: 0 0 1.4rem 1rem !important;
+        padding: 0 0 1.4rem 0 !important;
         a {
           padding: 0;
         }
     }
     h6 {
-      padding: 0 0 1.4rem 1rem !important;
+      padding: 0 0 1.4rem 0 !important;
       margin-bottom: 0;
       line-height: 1;
     }
