--- a/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
@@ -38,6 +38,10 @@ li {
     font-size: 20px;
 }
 
+li.accordion-item, ul#sticky li, footer#footer li {
+    font-size: inherit;
+}
+
 //remove margin above footer
 #footer-container {
     margin-top: 0 !important;
