--- a/wp-content/themes/askonasholt2016/assets/scss/global/_settings.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_settings.scss
@@ -585,4 +585,4 @@ $topbar-background: #121212;
 $topbar-submenu-background: $topbar-background;
 $topbar-link-color: #fff;
 $topbar-input-width: 200px;
-$topbar-unstack-breakpoint: medium;
+$topbar-unstack-breakpoint: large;
