--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -5698,7 +5698,7 @@ table.hover tbody tr:nth-of-type(even):hover {
   .top-bar .top-bar-left,
   .top-bar .top-bar-right {
     width: 100%; }
-  @media screen and (min-width: 40em) {
+  @media screen and (min-width: 64em) {
     .top-bar .top-bar-left,
     .top-bar .top-bar-right {
       width: auto; } }
@@ -6685,6 +6685,9 @@ p {
 
 li {
   font-size: 20px; }
+
+li.accordion-item, ul#sticky li, footer#footer li {
+  font-size: inherit; }
 
 #footer-container {
   margin-top: 0 !important; }
@@ -9329,11 +9332,11 @@ pre {
   -webkit-animation-name: slideOutUp;
   animation-name: slideOutUp; }
 
-@media screen and (max-width: 39.9375em) {
+@media screen and (max-width: 63.9375em) {
   .desktop-menu, .top-bar-left {
     display: none !important; } }
 
-@media screen and (min-width: 40em) {
+@media screen and (min-width: 64em) {
   #mobile-menu, .title-bar {
     display: none !important; } }
 
@@ -9696,10 +9699,13 @@ div#search-toggle {
     transform: translateY(-50%);
     right: 0; }
   .top-bar .menu li:not(:last-child) {
-    border-right: none;
-    height: 135px; }
+    border-right: none; }
   nav#site-navigation {
     position: relative; } }
+
+@media screen and (min-width: 64em) {
+  .top-bar .menu li:not(:last-child) {
+    height: 135px; } }
 
 .menu-item.menu-item-has-children.is-dropdown-submenu-parent:after {
   content: url("../images/down-arrow-small.png");
@@ -11310,7 +11316,7 @@ body.page div.slick-slider .center.slick-initialized.slick-slider {
 
 body.page div.slick-slider .center-image {
   height: 70vh;
-  margin: 2em 1em;
+  margin: 1em 1em;
   background-position: center center;
   background-repeat: no-repeat;
   border-bottom: 0;
@@ -11354,6 +11360,10 @@ div.padded-text {
   position: absolute;
   bottom: 3em;
   margin-left: 1em; }
+
+@media screen and (min-width: 40em) {
+  body.page div.slick-slider .center-image {
+    margin: 2em 1em; } }
 
 .artists {
   -webkit-transition: 0.5s;
