Making top -60px for in page nav scroll

--- a/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
@@ -38,7 +38,7 @@ li {
     font-size: 20px;
 }
 
-li.accordion-item, ul#sticky li, footer#footer li {
+li.accordion-item, ul#sticky li, footer#footer li, ul.quick-look-links li {
     font-size: inherit;
 }
 
