--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_front.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_front.scss
@@ -209,7 +209,7 @@
     display: flex;
     a.view-link {
         font-weight: bold;
-        line-height: 78px;
+        line-height: 1;
         color: initial;
         font-family: "Brown-Pro-Light", AdobeBlank;
     }
