--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
@@ -10,7 +10,7 @@
 // }
 
 .artist-filtering-block  {
-	min-height: 28em;
+	min-height: 20em;
 }
 
 .artist-filtering-block {
@@ -127,6 +127,7 @@
 	// width: 100%;
 	list-style: none;
 	margin: 0;
+	max-width: 95%;
 	li {
 		color: $white;
 		float: left;
@@ -280,4 +281,12 @@ body.post-type-archive-artists {
   		}
   	}
   }
+  h2.hero-heading {
+  	    font-size: 2rem;	
+  }
+}
+@include breakpoint(medium) {
+	.artist-filtering-block  {
+		min-height: 28em;
+	}
 }
