--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_filter-header.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_filter-header.scss
@@ -3,7 +3,12 @@
 .artist-filtering-block {
 
 	header.filter-header {
-		@include center;
+		position: absolute;
+	    top: 30%;
+	    left: 50%;
+	    -webkit-transform: translate(-50%, -50%);
+	    -ms-transform: translate(-50%, -50%);
+	    transform: translate(-50%, -50%);
 		width: 80%;
 		text-align: center;
 	}
@@ -17,4 +22,12 @@
 		//width: 80%;
 	}
 
+}
+
+@include breakpoint(medium) {
+	.artist-filtering-block header.filter-header {
+	    @include center;
+	    width: 80%;
+	    text-align: center;
+	}
 }
