--- a/wp-content/themes/askonasholt2016/assets/scss/components/_general-heroes.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_general-heroes.scss
@@ -12,7 +12,7 @@ span.hero-blurb p {
 
 .hero-header {
 	color: white;
-	font-size: 45px;
+	font-size: 35px;
 	padding: 11px;
 	font-family: $serif-font;
 }
@@ -98,3 +98,9 @@ button.hero-button {
   	max-width: 80%;
   }
 //}
+
+@include breakpoint(medium) {
+	.hero-text {
+		font-size: 45px;
+	}
+}
