--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_page-archive.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_page-archive.scss
@@ -2,7 +2,7 @@
 
   #archive {
     @include grid-row();
-    margin-top: 3rem;
+    //margin-top: 3rem;
 
     .main-content {
       @include breakpoint(small) {
@@ -12,6 +12,12 @@
       @include breakpoint(medium) {
         //@include grid-column(8);
       }
+    }
+  }
+
+  @include breakpoint(medium) {
+    #archive {
+      margin-top: 3rem;
     }
   }
 
