--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -6662,13 +6662,18 @@ table.hover tbody tr:nth-of-type(even):hover {
   margin-bottom: 100vh; }
 
 .section-header {
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding-top: 12.5px;
+  padding-bottom: 12.5px;
   color: #BA0C2F;
   font-family: "GeometricSlab703BT-Light"; }
   .section-header a {
     font-size: 17px;
     color: inherit; }
+
+@media screen and (min-width: 40em) {
+  .section-header {
+    padding-top: 25px;
+    padding-bottom: 25px; } }
 
 body.search .blogpost-entry {
   display: inline; }
@@ -9523,8 +9528,8 @@ ul.dropdown.menu.vertical.submenu.is-dropdown-submenu.first-sub:before {
       line-height: 1; }
       #footer-container #footer li a {
         padding: 0; }
-    #footer-container #footer li:not(:last-child) {
-      padding: 0 0 1.4rem 0 !important; }
+    #footer-container #footer li {
+      padding: 0 0 1rem 0 !important; }
     #footer-container #footer h6 {
       padding: 0 0 1.4rem 0 !important;
       margin-bottom: 0;
@@ -9558,11 +9563,13 @@ article#widget_text div.text-widget ul li {
   #footer-container, .textwidget, .widget_nav_men {
     text-align: center; }
   article {
-    margin: 25px 0; } }
+    margin: 12.5px 0; } }
 
 @media screen and (min-width: 40em) {
   #footer-container .column:last-child:not(:first-child), #footer-container .columns:last-child:not(:first-child), #footer-container .columns:last-child:not(:first-child) {
-    text-align: right; } }
+    text-align: right; }
+  #footer-container li:not(:last-child) {
+    padding: 0 0 1.4rem 0 !important; } }
 
 .sidebar {
   width: 100%;
@@ -11384,7 +11391,7 @@ div.padded-text {
     display: table;
     margin: 0; }
 
-.hero-text-area {
+.hero-text-area.hero-text {
   position: absolute;
   bottom: 3em;
   margin-left: 1em; }
@@ -11648,10 +11655,6 @@ button.hero-button {
 
 .hero-text {
   max-width: 80%; }
-
-@media screen and (min-width: 40em) {
-  .hero-text {
-    font-size: 45px; } }
 
 .text-banner-wrapper {
   max-width: 100%;
@@ -12106,28 +12109,29 @@ div#mega-toggle-block-1:after {
 
 .center-text-hero-header {
   position: relative;
-  height: 25vh !important;
+  height: 30vh !important;
   max-height: 500px;
   background-position: center center;
   background-repeat: no-repeat;
   border-bottom: 0;
   -webkit-background-size: cover;
   background-size: cover;
-  text-align: center;
-  margin-bottom: 50px; }
+  text-align: center; }
   .center-text-hero-header .center-hero-text {
     position: absolute;
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%); }
+    transform: translate(-50%, -50%);
+    width: 90%; }
     .center-text-hero-header .center-hero-text p {
       margin-bottom: 0; }
 
 @media screen and (min-width: 40em) {
   .center-text-hero-header {
-    height: 50vh !important; } }
+    height: 50vh !important;
+    margin-bottom: 50px; } }
 
 @-webkit-keyframes plyr-progress {
   to {
