Centering Filters, general styles.

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_staff-details.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_staff-details.scss
@@ -6,6 +6,8 @@ div.staff-header {
 		font-size: 13px;
 		letter-spacing: 1px;
 		list-style-type: none;
+		display: inline-block;
+		margin-right: 10px;
 	}
 }
 
