--- a/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
@@ -18,6 +18,11 @@
     }
 }
 
+div#narrow-text-page {
+    max-width: 57rem;
+    margin: 0 auto;
+}
+
 @include breakpoint(medium up) {
     .section-header  {
         padding-top: $sitepadding;
