--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
@@ -15,6 +15,12 @@
 
 .artist-filtering-block {
     position: relative;
+    background-size: cover;
+}
+
+.filter-area {
+	text-align: center;
+	width: 100%;
 }
 
 
@@ -23,11 +29,15 @@
 
 @include breakpoint(medium up) {
 	.artist-categories {
-		display: -webkit-box;
+		//display: -webkit-box;
+		width: 100%;
+		padding-left: 0;
 	}
 
 	.artist-categories li {
 		float: none !important;
+		display: inline;
+		text-align: center;
 	}
 	.artist-categories {
 		@include center(x);
@@ -123,7 +133,7 @@
 
 .artist-categories {
 	position: absolute;
-	bottom: 0;
+	bottom: 1em;
 	// width: 100%;
 	list-style: none;
 	margin: 0;
