Deleted MegaMenu & Filter updates.

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_general-heroes.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_general-heroes.scss
@@ -100,7 +100,7 @@ button.hero-button {
 //}
 
 @include breakpoint(medium) {
-	.hero-text {
-		//font-size: 45px;
+	.hero-header {
+		font-size: 45px;
 	}
 }
